force-app/main/default/objects/rh2__PS_Object_Realtime__c/fields/rh2__Allow_Child_Save_If_Parent_Save_Fails__c.field-meta.xml
<CustomField>
    <fullName>rh2__Allow_Child_Save_If_Parent_Save_Fails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to allow child records to save even if the parent record hits an exception while saving.</description>
    <inlineHelpText>Check this box to allow child records to save even if the parent record hits an exception while saving.</inlineHelpText>
    <label>Allow Child Save If Parent Save Fails</label>
    <type>Checkbox</type>
</CustomField>