force-app/main/default/objects/rh2__PS_Object_Realtime__c/fields/rh2__Asynchronous__c.field-meta.xml
<CustomField>
    <fullName>rh2__Asynchronous__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Forces rollups to run asynchronously on the specified object.</inlineHelpText>
    <label>Enable Asynchronous Processing</label>
    <type>Checkbox</type>
</CustomField>