force-app/main/default/objects/rh2__PS_Object_Realtime__c/fields/rh2__Disable_realtime__c.field-meta.xml
<CustomField>
    <fullName>rh2__Disable_realtime__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables realtime processing on the specified object type when checked.</inlineHelpText>
    <label>Disable Realtime Processing</label>
    <type>Checkbox</type>
</CustomField>