force-app/main/default/objects/rh2__PS_Object_Realtime__c/fields/rh2__Disable_Trigger__c.field-meta.xml
<CustomField>
    <fullName>rh2__Disable_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables default Rollup Helper trigger on the specified object type when checked.</inlineHelpText>
    <label>Disable Trigger</label>
    <type>Checkbox</type>
</CustomField>