force-app/main/default/objects/rh2__PS_Object_Realtime__c/fields/rh2__Enhanced_Validation__c.field-meta.xml
<CustomField>
    <fullName>rh2__Enhanced_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Runs rollups in additional trigger contexts on the specified object type when checked. Used to catch validation rules in delete contexts.</inlineHelpText>
    <label>Enhanced Validation</label>
    <type>Checkbox</type>
</CustomField>